--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,1 +1,34 @@
-<h1>Friend Finder</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Friend Finder</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" type="text/css" media="screen" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <!-- jQuery -->
+    <script
+        src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+        crossorigin="anonymous">
+    </script>
+</head>
+<body>
+    <div class="container">
+        <div class="jumbotron">
+            <h1>Friend Finder</h1>
+            <hr />
+            <h3>Answer a few basic questions.</h3>
+            <h3>Then find the friend with the greatest compatibility!</h3>
+            <br />
+            <button type="button" class="btn btn-info btn-lg" id="surveyBtn">Go to Survey</button>
+        </div>
+        <div class="row">
+            <div class="col">
+                <a href="#">API Friends List</a> | <a href="#">GitHub Repo</a>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
