--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -21,18 +21,132 @@
                 <h2>Survey Questions</h2>
                 <hr />
                 <form>
-                    <h4>About You</h4>
+                    <h5>About You</h5>
                     <div class="form-group">
                         <label for="nameInput">Name (Required)</label>
-                        <input type="text" class="form-control" id="nameInput">
+                        <input type="text" class="form-control" id="name-input">
                     </div>
                     <div class="form-group">
                         <label for="photoInput">Link to Photo Image (Required)</label>
-                        <input type="text" class="form-control" id="photoInput">
+                        <input type="text" class="form-control" id="photo-input">
                     </div>
+                    <hr />
+                    <h5>Question 1</h5>
+                    <div class="form-group">
+                        <label for="1">Some question</label>
+                        <select class="form-control" id="1">
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                        </select>
+                    </div>
+                    <h5>Question 2</h5>
+                    <div class="form-group">
+                        <label for="2">Some question</label>
+                        <select class="form-control" id="2">
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                        </select>
+                    </div>
+                    <h5>Question 3</h5>
+                    <div class="form-group">
+                        <label for="3">Some question</label>
+                        <select class="form-control" id="3">
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                        </select>
+                    </div>
+                    <h5>Question 4</h5>
+                    <div class="form-group">
+                        <label for="4">Some question</label>
+                        <select class="form-control" id="4">
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                        </select>
+                    </div>
+                    <div>
+                    <h5>Question 5</h5>
+                    <div class="form-group">
+                        <label for="5">Some question</label>
+                        <select class="form-control" id="5">
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                        </select>
+                    </div>
+                    <h5>Question 6</h5>
+                    <div class="form-group">
+                        <label for="6">Some question</label>
+                        <select class="form-control" id="6">
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                        </select>
+                    </div>
+                    <h5>Question 7</h5>
+                    <div class="form-group">
+                        <label for="7">Some question</label>
+                        <select class="form-control" id="7">
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                        </select>
+                    </div>
+                    <h5>Question 8</h5>
+                    <div class="form-group">
+                        <label for="8">Some question</label>
+                        <select class="form-control" id="8">
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                        </select>
+                    </div>
+                    <h5>Question 9</h5>
+                    <div class="form-group">
+                        <label for="9">Some question</label>
+                        <select class="form-control" id="9">
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                        </select>
+                    </div>
+                    <h5>Question 10</h5>
+                    <div class="form-group">
+                        <label for="10">Some question</label>
+                        <select class="form-control" id="10">
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                        </select>
+                    </div>
+                    <button type="submit" class="btn btn-lg btn-info">Submit</button>
                 </form>
             </div>
         </div>
     </div>
+    <br />
 </body>
 </html>
