--- a/app/public/home.html
+++ b/app/public/home.html
@@ -22,7 +22,7 @@
             <h3>Answer a few basic questions.</h3>
             <h3>Then find the friend with the greatest compatibility!</h3>
             <br />
-            <a href="/survey"><button type="button" class="btn btn-info btn-lg" id="surveyBtn">Go to Survey</button></a>
+            <a href="/survey"><button type="button" class="btn btn-info btn-lg" id="survey-link">Go to Survey</button></a>
         </div>
         <div class="row">
             <div class="col">
