Log data in console

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -162,6 +162,7 @@
             console.log(scores);
 
             $.post("/api/friends", function(data) {
+                console.log(data);
                 if (data) {
                     alert("Your friend info is recorded,");
                 }
