Compare scores of user input to scores of friends array

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -26,7 +26,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <a href="#">API Friends List</a> | <a href="#">GitHub Repo</a>
+                <a href="/api/friends">API Friends List</a> | <a href="https://github.com/sdreyes/FriendFinder">GitHub Repo</a>
             </div>
         </div>
     </div>
