--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -150,8 +150,9 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="assignedFriendLabel">Match Found!</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                                 </div> 
-                                <div class="modal-body" id="assignedFriendPhoto">
+                                <div class="modal-body text-center" id="assignedFriendInfo">
                                     <!-- Friend info goes here -->
                                 </div>
                                 <div class="modal-footer">
@@ -180,7 +181,7 @@
             };
 
             $.post("./api/friends", newFriend, function(data) {
-
+                $("#assignedFriendInfo").html("<img class='img-fluid' src='" + data.photo + "'><h3>" + data.name + "</h3>");
             })
         })
     </script>
