--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -35,7 +35,7 @@
                     <hr />
                     <h5>Question 1</h5>
                     <div class="form-group">
-                        <label for="1">Some question</label>
+                        <label for="1">Your mind is always buzzing with unexplored ideas and plans.</label>
                         <select class="form-control" id="1">
                             <option>1</option>
                             <option>2</option>
@@ -46,7 +46,7 @@
                     </div>
                     <h5>Question 2</h5>
                     <div class="form-group">
-                        <label for="2">Some question</label>
+                        <label for="2">Generally speaking, you rely more on your experience than your imagination.</label>
                         <select class="form-control" id="2">
                             <option>1</option>
                             <option>2</option>
@@ -57,7 +57,7 @@
                     </div>
                     <h5>Question 3</h5>
                     <div class="form-group">
-                        <label for="3">Some question</label>
+                        <label for="3">You find it easy to stay relaxed and focused even when there is some pressure.</label>
                         <select class="form-control" id="3">
                             <option>1</option>
                             <option>2</option>
@@ -68,7 +68,7 @@
                     </div>
                     <h5>Question 4</h5>
                     <div class="form-group">
-                        <label for="4">Some question</label>
+                        <label for="4">You rarely do something just out of sheer curiosity.</label>
                         <select class="form-control" id="4">
                             <option>1</option>
                             <option>2</option>
@@ -80,7 +80,7 @@
                     <div>
                     <h5>Question 5</h5>
                     <div class="form-group">
-                        <label for="5">Some question</label>
+                        <label for="5">People can rarely upset you.</label>
                         <select class="form-control" id="5">
                             <option>1</option>
                             <option>2</option>
@@ -91,7 +91,7 @@
                     </div>
                     <h5>Question 6</h5>
                     <div class="form-group">
-                        <label for="6">Some question</label>
+                        <label for="6">It is often difficult for you to relate to other people’s feelings.</label>
                         <select class="form-control" id="6">
                             <option>1</option>
                             <option>2</option>
@@ -102,7 +102,7 @@
                     </div>
                     <h5>Question 7</h5>
                     <div class="form-group">
-                        <label for="7">Some question</label>
+                        <label for="7">In a discussion, truth should be more important than people’s sensitivities.</label>
                         <select class="form-control" id="7">
                             <option>1</option>
                             <option>2</option>
@@ -113,7 +113,7 @@
                     </div>
                     <h5>Question 8</h5>
                     <div class="form-group">
-                        <label for="8">Some question</label>
+                        <label for="8">You rarely get carried away by fantasies and ideas.</label>
                         <select class="form-control" id="8">
                             <option>1</option>
                             <option>2</option>
@@ -124,7 +124,7 @@
                     </div>
                     <h5>Question 9</h5>
                     <div class="form-group">
-                        <label for="9">Some question</label>
+                        <label for="9">You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</label>
                         <select class="form-control" id="9">
                             <option>1</option>
                             <option>2</option>
@@ -135,7 +135,7 @@
                     </div>
                     <h5>Question 10</h5>
                     <div class="form-group">
-                        <label for="10">Some question</label>
+                        <label for="10">You feel more energetic after spending time with a group of people.</label>
                         <select class="form-control" id="10">
                             <option>1</option>
                             <option>2</option>
