Include open graph metadata

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Friend Finder</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="https://sdreyes.github.io/assets/images/friendfinder.jpg" />
+    <meta property="og:image:alt" content="Friend Finder Preview" />
+    <meta property="og:title" content="Friend Finder" />
+    <meta property="og:description" content="Friend Finder compares your survey answers to every other user that has taken the survey. It then returns a friend's name and photo with the answers most similar to yours. Technologies used: Node,js, Express.js, HTML5, Bootstrap, JavaScript, and jQuery." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://friend-finder-sdreyes.herokuapp.com/" />
     <!-- Bootstrap -->
     <link rel="stylesheet" type="text/css" media="screen" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- jQuery -->
